# malygos

./: CMakeLists.txt  README.md
docs/: FAQ.md
src/: CMakeLists.txt  geometry.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h
tests/: CMakeLists.txt  test_geometry.cpp  test_main.cpp  test_model.cpp  test_renderer.cpp
